@@ -6,6 +6,8 @@
 	- Show the best loss value in auto-tuning.
 - Weapons:
 	- Add a stagger option to barrage mode that fires barrages in bursts and adds variability to the reload times. Mostly only suitable for slow-firing ship guns.
+- Competitions:
+	- Add a --no-header option to the parsing script.
 
 v1.5.5.1
 IMPROVEMENTS / FIXES
